# messaging-client-and-server

./: .gitignore  .stylelintrc.yml  Makefile  pyproject.toml  toggle_env.sh
.github/workflows/: rust-test-build.yml
frontend/: admin.html  chat.html  error.html  index.html  package.json  register.html  settings.html
frontend/non-static/: auth.js  chat.js  settings.js  utils.js
frontend/non-static/admin/: admin.actions.js  admin.config.js  admin.init.js  admin.state.js  admin.ui.js  admin.users.js
frontend/non-static/auth/: auth.init.js  auth.login.js  auth.register.js
frontend/non-static/chat/: chat.conversations.js  chat.files.js  chat.init.js  chat.messages.js  chat.sse.js  chat.state.js  chat.ui.js
frontend/non-static/full/admin/: admin.config.js  admin.init.js  admin.state.js  admin.ui.js  admin.users.js
frontend/non-static/full/auth/: auth.init.js  auth.login.js  auth.register.js
frontend/non-static/full/chat/: chat.conversations.js  chat.files.js  chat.init.js  chat.messages.js  chat.sse.js  chat.state.js  chat.ui.js
frontend/non-static/full/settings/: settings.account.js  settings.init.js  settings.nav.js  settings.preferences.js  settings.profile.js
frontend/non-static/settings/: settings.account.js  settings.init.js  settings.nav.js  settings.preferences.js  settings.profile.js
frontend/static/css/: var.css
frontend/static/css/admin/: admin.dark.css  admin.light.css
frontend/static/css/auth/: auth.dark.css  auth.light.css
frontend/static/css/base/: base.dark.css  base.light.css
frontend/static/css/chat/: chat.dark.css  chat.light.css  chat.override.css
frontend/static/css/error/: error.dark.css  error.light.css
frontend/static/css/full/: var.css
frontend/static/css/full/admin/: admin.dark.css
frontend/static/css/settings/: settings.dark.css  settings.light.css
frontend/static/icons/icons/: SVG_SEPARATION_README.md
frontend/static/js/auth/: auth.password.js
frontend/static/js/config/: platform.config.js  route.config.js
frontend/static/js/full/utils/: dom.js  (+4 more)
frontend/static/js/utils/: error.interceptor.js  loading.js  presence_client.js  theme.manager.js  theme_manager.js  utils.js
python-gui/: __init__.py  api.py  app.py  cache.py  config.py  logger.py  main.py  pyproject.toml  setup.py  test_api.py  test_cache.py  theme.py  wip.py
rust/: Cargo.toml  messaging.db  verify_setup.sh
rust/server/: Cargo.toml  messaging.db
rust/server/config/: config.toml
rust/server/migrations/: 20260508000000_initial_schema.sql
rust/server/proptest-regressions/: proptest_register.txt
rust/server/src/: lib.rs  main.rs
rust/server/src/database/: ban.rs  create.rs  files.rs  groups.rs  login.rs  messages.rs  mod.rs  password.rs  presence.rs  register.rs  utils.rs
rust/server/src/handlers/: admin.rs  form_handlers_example.rs  mod.rs  user.rs
rust/server/src/handlers/FormHandlers/: login.rs  mod.rs  register.rs
rust/server/src/handlers/end_points/: chats.rs  groups.rs  mod.rs  profile.rs
rust/server/src/handlers/form-handlers/: login.rs  register.rs
rust/server/src/handlers/form_handlers/: mod.rs  register.rs
rust/server/src/handlers/http/: mod.rs  routes.rs  routes_1.rs
rust/server/src/handlers/http/admin/: admin.rs  mod.rs  reload.rs  stats.rs  users.rs
rust/server/src/handlers/http/auth/: admin_login.rs  login.rs  logout.rs  mod.rs  register.rs  reset.rs
rust/server/src/handlers/http/files/: login.rs
rust/server/src/handlers/http/messaging/: chats.rs  files.rs  groups.rs  messages.rs  mod.rs
rust/server/src/handlers/http/profile/: get.rs  mod.rs  presence.rs  profile.rs  profile_helper.rs  settings.rs  update.rs
rust/server/src/handlers/http/utils/: deliver_page.rs  error_response.rs  headers.rs  http.rs  json_response.rs  mod.rs  response_conversion.rs  upgrade.rs
rust/server/src/handlers/socket/: mod.rs
rust/server/src/handlers/sse/: mod.rs  sse.rs  sse_helper.rs
rust/server/src/handlers/utils/: deliver_page.rs  error_response.rs  headers.rs  mod.rs  upgrade.rs
rust/server/src/security/: mod.rs  rate_limiter.rs
rust/server/src/tower_middle/: hyper_to_tower_adapter.rs  mod.rs  tower_addr.rs  tower_ip_filter.rs  tower_metrics.rs  tower_rate_limiter.rs  tower_timeout_handler.rs
rust/server/src/tower_middle/security/: ip_filter.rs  metrics.rs  mod.rs  rate_limiter.rs
rust/server/tests/: lib.rs  proptest_negative.rs  proptest_password.rs  proptest_register.rs  proptest_suite.rs  proptest_utils.rs
rust/server/tests/common/: mod.rs
rust/server/tests/database/: db_ban.rs  db_file.rs  db_group.rs  db_message.rs  db_registration.rs  db_utils.rs  mod.rs
rust/server/tests/database/common/: mod.rs
rust/server/tests/handlers/: mod.rs
rust/server/tests/handlers/http/: handlers_http_routing.rs  handlers_http_sse.rs  handlers_http_sse_manager.rs  handlers_http_users.rs  mod.rs
rust/server/tests/handlers/http/auth/: login.rs  register.rs
rust/server/tests/handlers/http/messaging/: handlers_messaging_files.rs  handlers_messaging_groups.rs  handlers_messaging_messages.rs  handlers_messaging_profile.rs  mod.rs
rust/server/tests/handlers/http/utils/: handlers_http_deliver_page.rs  handlers_http_headers.rs  handlers_http_http.rs  handlers_http_json_response.rs  mod.rs
rust/server/tests/handlers/middleware/: handlers_middleware_ip_filter.rs  handlers_middleware_metrics.rs  handlers_middleware_rate_limiter.rs  mod.rs
rust/shared/: Cargo.toml
rust/shared/src/: lib.rs
rust/shared/src/config/: config.rs  mod.rs
rust/shared/src/types/: cache.rs  groups.rs  json_error.rs  jwt.rs  login.rs  message.rs  mod.rs  page_error.rs  password.rs  register.rs  server_config.rs  server_stats.rs  settings.rs  sse.rs  update.rs  user.rs
rust/shared/src/utils/: sanitization.rs
rust/shared/tests/: cache_tests.rs  json_error_tests.rs  jwt_tests.rs  login_tests.rs  message_tests.rs  register_tests.rs  server_stats.rs  settings_tests.rs  sse_tests.rs  type_tests.rs  update_tests.rs
rust/tui/: Cargo.toml
rust/~/Documents/messaging-client-and-server/uploads/: 9dcde9e9-2136-4a38-8e42-db33b16331a7_chat.ui.js
(+10 files in other folders)
