[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chat-client"
version = "2.0.0"
description = "A modern Python GUI client for the Rust messaging server"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
chat-client = "main:main"

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88

