[workspace]
members = [
    "shared",
    "server",
    "tui"
]

resolver = "2"

[workspace.dependencies]

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1.37", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "net",
    "time",
    "sync",
    "io-util"
] }

# HTTP
http = "1.4.0"
http-body-util = "0.1"
form_urlencoded = "1.2.2"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Error handling
anyhow = "1.0"

# Bytes
bytes = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

[profile.bench]
inherits = "release"
debug = true
