[package]
name = "server"
version = "0.1.0"
edition = "2024"
authors = ["Renier Barnard"]
description = "Low-level async messaging server with http and websockets"
license = "MIT"


[dependencies]

# Unique IDs
uuid = { version = "1", features = ["v4", "serde"] }
tokio-rusqlite = "0.7.0"

argon2 = "0.5"
rand = "0.8"
aes-gcm = "0.10"
flate2 = "1.0"
hex = "0.4"
ipnet = "2"

tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "timeout", "cors", "compression-br", "compression-gzip", "compression-zstd"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tokio-tungstenite = { workspace = true }
tungstenite = { workspace = true }
bytes = { workspace = true }
form_urlencoded = { workspace = true }


# Shared lib
shared = { path = "../shared" }
