[package]
name = "server"
version = "0.1.0"
edition = "2024"
authors = ["Renier Barnard"]
description = "Low-level async messaging server with HTTP and SSE"
license = "MIT"

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
# SSE for live messages
async-stream = "0.3"
futures-util = "0.3"

httpdate = "1.0.3"

# IP filtering
ipnet = "2.11.0"

# Password hashing
argon2 = "0.5"

# Randomness (for nonces + keys)
rand = "0.8"

libc = "0.2"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Authenticated encryption (server-side at rest)
chacha20poly1305 = { version = "0.10", features = ["std"] }

# Compression
flate2 = "1.0"

base64 = "0.22"

multer = "3"

# Tower
tower = { version = "0.5.3", default-features = false, features = [
  "util",
  "load-shed",
] }

tower-http = { version = "0.6.8", default-features = false, features = [
  "compression-gzip",
  "compression-deflate",
  "cors",
] }

# Hyper (HTTP + SSE)
hyper-util = { version = "0.1", default-features = false, features = [
  "tokio",
  "service",
] }

tokio-rusqlite = "0.7.0"

# Used for tests
tempfile = "3.26.0"

# Workspace deps — `signal` added here for SIGHUP hot-reload; absent from the
# workspace set because tui and shared have no use for it.
tokio = { workspace = true, features = ["signal", "fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
form_urlencoded = { workspace = true }
hyper = { workspace = true }
clap = { workspace = true }

# Shared lib
shared = { path = "../shared" }

[dev-dependencies]
proptest = "1.11.0"
tokio-test = "0.4"
