[package]
name = "shared"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Common library for async server and tui client"

[dependencies]
thiserror = "2"
toml = "0.8"

jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
