[package]
name = "tui"
version = "0.1.0"
edition = "2024"
authors = ["Renier Barnard"]
description = "Low-level async messaging TUI client (SSE)"
license = "MIT"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
form_urlencoded = { workspace = true }

# Shared lib
shared = { path = "../shared" }
